--- a/static/css/query-builder.css
+++ b/static/css/query-builder.css
@@ -363,9 +363,9 @@ input.form-control {
 .tab-list {
     margin: 10px 24px 0 23px !important;
     width: 220px;
-    height: 40px;
+    height: 44px;
     border-radius: 5px;
-    border: 1px solid var(--border-switch);
+    background: var(--myOrg-input);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -382,7 +382,7 @@ input.form-control {
 }
 
 .tab-li {
-    height: 32px;
+    height: 34px;
     border-radius: 5px;
 }
 
@@ -413,9 +413,10 @@ a:visited.ui-button,
     color: var(--border-switch) !important;
 }
 
-.ui-state-active {
-    background-color: rgba(99, 71, 217, 0.15) !important;
+.ui-tabs .ui-tabs-nav .ui-state-active {
+    background: var(--tab-active-background) !important;
     border: 1px solid var(--purple-1) !important;
+    margin-top: 1px;
 }
 
 .ui-state-active a,
@@ -431,6 +432,9 @@ a:visited.ui-button,
 
 .ui-tabs .ui-tabs-nav li {
     margin: 0;
+    background: var(--myOrg-input) !important;
+    height: 34px;
+    font-size: 17px;
 }
 
 #index-btn,
