--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -4475,3 +4475,12 @@ color: #C8C7CC;
 .search:hover{
     color:deepskyblue;
 }
+.custom-search{
+    font-style: italic;
+    font-family: Helvetica;
+    font-weight: bold;
+    color:black;
+}
+.custom-search:hover{
+    color:deepskyblue;
+}
