--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -4469,7 +4469,7 @@ color: #C8C7CC;
     font-style: italic;
     font-family: Helvetica;
     font-weight: bold;
-    color:light-black;
+    color:black;
 }
 
 .search:hover{
@@ -4479,7 +4479,7 @@ color: #C8C7CC;
     font-style: italic;
     font-family: Helvetica;
     font-weight: bold;
-    color:light-black;
+    color:black;
 }
 .custom-search:hover{
     color:deepskyblue;
