--- a/static/css/plug-in.css
+++ b/static/css/plug-in.css
@@ -3,4 +3,18 @@
     overflow-y: scroll;
     width: 100%;
     overflow-x: hidden;
+    scrollbar-width: none; /* firefox */
+    -ms-overflow-style: none;/* IE 10+ */
+}
+.dropdown-plugin::-webkit-scrollbar {
+    display: none;
+    /* Chrome Safari */
+}
+.index-dropdown-item{
+    margin: 0 5px 5px 5px;
+    width: auto;
+}
+.index-dropdown-item:hover{
+    background: #6347D9;
+    color: var(--white);
 }
