--- a/static/css/search-traces.css
+++ b/static/css/search-traces.css
@@ -15,6 +15,9 @@
     --qb-input-box-color: var(--white-1);
     --qb-box-bg: var(--white-0); */
 }
+#date-picker-btn{
+    width: 100%;
+}
 .graph-info,
 .sorts-method,
 .warm-content,
@@ -43,10 +46,12 @@
     padding: 20px;
 }
 .warn-bottom,
-.section-top,
+.section-center,
+.graph-info,
 .search{
     border: 1px solid var(--border-btn-color);
     box-shadow: 0px 2px 8px 0px var(--border-shadow);
+    border-radius: 10px;
 }
 .duration{
     display: flex;
@@ -55,26 +60,27 @@
 .right-section{
     width: 65%;
 }
-.section-top{
-    height: 60%;
+.section-center{
+    height: 35%;
+    width: 100%;
 }
 .warn-bottom{
-    height: 30%;
+    height: 45%;
 }
-.graph-info,
 .warm-head{
     background-color: var(--drop-down-btn-bg-regular);
 }
 .graph-info{
-    height: 20%;
+    height: 10%;
     align-items: center;
     padding: 0 20px;
 }
-.graph-show{
-    height: 80%;
-}
 .dropdown-toggle{
     width: 100%;
+}
+.graph-show{
+    width: 100%;
+    height: 120%;
 }
 .dropdown-box,
 .input-box,
@@ -100,4 +106,12 @@
 .dropdown-menu.daterangepicker.show{
     top: -300px !important;
     left: 140px !important;
+}
+.form-control{
+    height: 40px;
+}
+.lookback{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
 }
