--- a/static/css/search-traces.css
+++ b/static/css/search-traces.css
@@ -4,24 +4,23 @@
 
 :root {
    --border-shadow: var(--shadow-1);
-    /* --code-input-box-color: var(--black-1);
-    --qb-input-box-color: var(--black-2);
-    --qb-box-bg: var(--black-1); */
+   --seach-box-input: var(--black-2);
+   --sort-box: var(--black-2);
 }
 
 [data-theme='light'] {
     --border-shadow: var(--shadow-2);
-    /* --code-input-box-color: var(--white-1);
-    --qb-input-box-color: var(--white-1);
-    --qb-box-bg: var(--white-0); */
+    --seach-box-input: var(--white-1);
+    --sort-box: var(--white-0);
 }
 #date-picker-btn{
-    width: 100%;
+    width: 100% !important;
 }
+.spans-box,
 .graph-info,
 .sorts-method,
-.warm-content,
-.warm-head,
+.warn-content,
+.warn-head,
 .page-block{
     display: flex;
     flex-direction: row;
@@ -32,8 +31,8 @@
 }
 .dropdown-box,
 .dropdown-sort-box,
+.dropdown-download-box,
 .input-box,
-.warm-content-right,
 .right-section{
     display: flex;
     flex-direction: column;
@@ -44,14 +43,16 @@
     display: flex;
     flex-direction: column;
     padding: 20px;
+    height: 620px;
 }
-.warn-bottom,
+.warn-box,
 .section-center,
 .graph-info,
 .search{
     border: 1px solid var(--border-btn-color);
     box-shadow: 0px 2px 8px 0px var(--border-shadow);
     border-radius: 10px;
+    background-color: var(--default-tab);
 }
 .duration{
     display: flex;
@@ -59,28 +60,59 @@
 }
 .right-section{
     width: 65%;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
 }
 .section-center{
-    height: 35%;
     width: 100%;
+    margin-top: 25px;
+    height: 280px;
 }
 .warn-bottom{
-    height: 45%;
+    margin-top: 5px;
+    height: 500px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    scrollbar-width: none; /* firefox */
+    -ms-overflow-style: none;/* IE 10+ */
 }
-.warm-head{
+.warn-bottom::-webkit-scrollbar {
+    display: none;
+    /* Chrome Safari */
+}
+.warn-head{
     background-color: var(--drop-down-btn-bg-regular);
+    height: 30%;
+    align-items: center;
+    font-size: 1rem;
+    padding: 0 15px;
+    font-weight: 600;
 }
 .graph-info{
-    height: 10%;
+    height: 66px;
     align-items: center;
     padding: 0 20px;
 }
+input.form-control,
 .dropdown-toggle{
-    width: 100%;
+    background: var(--seach-box-input) !important;
+    border: 1px solid var(--border-btn-color) !important;
+}
+.download-trace{
+    background: var(--sort-box) !important;
+    border: 1px solid var(--border-btn-color) !important;
+    border-radius: 5px;
+    height: 40px;
+    color: var(--text-color);
+    font-size: 1rem;
+}
+.download-trace{
+    width: 150px;
 }
 .graph-show{
     width: 100%;
-    height: 120%;
+    height: 100%;
 }
 .dropdown-box,
 .input-box,
@@ -98,14 +130,19 @@
 }
 .sorts-method{
     align-items: center;
+    width: 380px;
+}
+.dropdown-download-box{
+    margin-top: 0;
+    width: 160px;
 }
 .dropdown-sort-box{
     margin-top: 0;
     width: 150px;
 }
 .dropdown-menu.daterangepicker.show{
-    top: -300px !important;
-    left: 140px !important;
+    top: -530px !important;
+    left: 0 !important;
 }
 .form-control{
     height: 40px;
@@ -114,4 +151,75 @@
     margin-top: 20px;
     display: flex;
     flex-direction: column;
+}
+.search-trace-btn-box{
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+}
+.search-trace-btn{
+    background-color: var(--purple-1);
+    border: none;
+    color: var(--white) !important;
+    width: 48%;
+}
+.search-text{
+    margin-bottom: 6px;
+    font-size: 20px;
+}
+.empty-result-show{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: var(--empty-response-text-color);
+    height: 100%;
+    font-size: 22px;
+}
+.warn-box{
+    height: 150px;
+    margin-top: 20px;
+}
+.span-id {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 200px;
+}
+.error-span,
+.total-span{
+    width: 100px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.spans-box{
+    width: 220px;
+    height: 32px;
+}
+.error-span{
+    border: 1px solid var(--error-trace);
+    color: var(--error-trace);
+    background: var(--trace-error-shadow);
+}
+.total-span{
+    border: 1px solid var(--border-switch);
+    background-color: var(--table-head-bg-color);
+    color: var(--text-color);
+}
+.warn-content{
+    padding: 12px 15px;
+    font-size: 1rem;
+    height: 70%;
+}
+.warn-content-right{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: flex-start;
+}
+.how-long-time{
+    color: var(--border-switch);
 }
