--- a/static/css/search-traces.css
+++ b/static/css/search-traces.css
@@ -4,13 +4,15 @@
 
 :root {
    --border-shadow: var(--shadow-1);
-   --seach-box-input: var(--black-2);
+   --search-box-input: var(--black-2);
+   --search-box-input-trace: var(--black-2);
    --sort-box: var(--black-2);
 }
 
 [data-theme='light'] {
     --border-shadow: var(--shadow-2);
-    --seach-box-input: var(--white-1);
+    --search-box-input: var(--white-1);
+    --search-box-input-trace: var(--white-0);
     --sort-box: var(--white-0);
 }
 #date-picker-btn{
@@ -94,9 +96,8 @@
     align-items: center;
     padding: 0 20px;
 }
-input.form-control,
-.dropdown-toggle{
-    background: var(--seach-box-input) !important;
+input.form-control{
+    background: var(--search-box-input) !important;
     border: 1px solid var(--border-btn-color) !important;
 }
 .download-trace{
@@ -139,10 +140,6 @@ input.form-control,
 .dropdown-sort-box{
     margin-top: 0;
     width: 150px;
-}
-.dropdown-menu.daterangepicker.show{
-    top: -530px !important;
-    left: 0 !important;
 }
 .form-control{
     height: 40px;
@@ -222,4 +219,12 @@ input.form-control,
 }
 .how-long-time{
     color: var(--border-switch);
+}
+.search-trace-btn:hover,
+.search-trace-btn.active {
+    background-color: var(--btn-hover-or-click-bg-color);
+}
+.downloadresult-btn,
+.mostrecent-btn{
+    background-color: var(--search-box-input-trace)
 }
