--- a/static/css/tracing.css
+++ b/static/css/tracing.css
@@ -147,3 +147,25 @@
     background: var(--alerting-table-hover);
     cursor: pointer;
 }
+
+.service-name{
+    font-size: 22px;
+    cursor: pointer;
+    margin-bottom: 0;
+}
+
+.service-health-text{
+    font-size: 22px;
+    color: #6F6B7B;
+    cursor: pointer;
+    margin-bottom: 0;
+}
+
+#one-service-overview .chart-container{
+    width: 50%;
+    margin: 20px;
+}
+
+#one-service-overview .chart_container{
+    width: 100%;
+}
