--- a/static/css/tracing.css
+++ b/static/css/tracing.css
@@ -69,13 +69,13 @@
 }
 
 /* Dependency Graph */
-#dependency-graph-container,#error-msg-container {
+#dependency-graph-container,#error-msg-container,#empty-msg-container {
     margin-top: 30px;
     height: 100%; 
     width: 100%;
 }
 
-#dependency-graph-container svg ,#error-msg-container{
+#dependency-graph-container svg ,#error-msg-container, #empty-msg-container{
     width: 100%;
     height: 100%;
     box-shadow: var(--box-shadow);
@@ -84,7 +84,7 @@
     border-radius: 10px;
 }
 
-#error-msg-container p{
+#error-msg-container p, #empty-msg-container p{
     text-align: center;
     font-size: 24px;
     line-height: 31px;
