change service and operation relation

--- a/static/component/single-box/single-box.css
+++ b/static/component/single-box/single-box.css
@@ -37,6 +37,7 @@
     overflow-x: hidden;
     scrollbar-width: none; /* firefox */
     -ms-overflow-style: none;/* IE 10+ */
+    display: none;
 }
 .dropdown-plugin::-webkit-scrollbar {
     display: none;
