--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -704,7 +704,7 @@ body {
 #cancel-loading.active {
     background: var(--btn-hover-or-click-bg-color);
 }
-
+#alert-btn,
 #index-btn,
 #query-language-btn,
 #filter-input,
@@ -735,7 +735,7 @@ body {
 #avail-fields-btn {
     height: 44px;
 }
-
+#alert-btn:hover,
 #index-btn:hover,
 #query-language-btn:hover,
 #date-picker-btn:hover,
@@ -744,6 +744,7 @@ body {
 }
 
 #avail-fields-btn:focus,
+#alert-btn.active,
 #index-btn.active,
 #query-language-btn.active,
 #date-picker-btn.active,
@@ -762,6 +763,7 @@ body {
 }
 
 #query-language-btn.active .dropdown-arrow.orange, 
+#alert-btn.active .dropdown-arrow.orange,
 #index-btn.active .dropdown-arrow.orange,
 #date-picker-btn.active .dropdown-arrow.orange,
 #avail-fields-btn.active .dropdown-arrow.orange,
@@ -774,7 +776,9 @@ body {
 #available-indexes {
     width: 300px;
 }
-
+#associated-alerts {
+    width: 300px;
+}
 #app-footer {
     position: fixed;
     bottom: 0;
@@ -1580,6 +1584,13 @@ progress.hidden {
     overflow: scroll;
     border: 1px solid var(--timepicker-border-color);
 }
+#associated-alerts {
+    width: 265px;
+    max-height: 209px;
+    background: var(--index-drop-down-box-bg-color);
+    overflow: scroll;
+    border: 1px solid var(--timepicker-border-color);
+}
 #save-query-options,
 #query-language-options {
     width: 130px;
@@ -1589,7 +1600,7 @@ progress.hidden {
     border: 1px solid var(--timepicker-border-color);
 }
 
-.index-dropdown-item, .query-language-option ,.panEdit-query-language-option {
+.index-dropdown-item,.alert-dropdown-item, .query-language-option ,.panEdit-query-language-option {
     width: 241px;
     background: var(--index-drop-down-item-inactive-bg-color);
     color: var(--index-drop-down-item-inactive-text-color);
@@ -1611,12 +1622,12 @@ progress.hidden {
     margin-top: 10px;
 }
 
-.index-dropdown-item:hover,.panEdit-query-language-option:hover, .query-language-option:hover{
+.index-dropdown-item:hover,.alert-dropdown-item:hover,.panEdit-query-language-option:hover, .query-language-option:hover{
     background: var(--index-drop-down-item-hover-bg-color);
     color: var(--index-drop-down-item-hover-text-color);
 }
 
-.index-dropdown-item.active,.panEdit-query-language-option.active, .query-language-option.active{
+.index-dropdown-item.active,.alert-dropdown-item.active,.panEdit-query-language-option.active, .query-language-option.active{
     background: var(--index-drop-down-item-active-bg-color);
     color: var(--index-drop-down-item-active-text-color);
 }
@@ -1628,9 +1639,18 @@ progress.hidden {
     top: 9px;
     right: 5px;
 }
-
+.alert-dropdown-item img {
+    display: none;
+    float: right;
+    position: relative;
+    top: 9px;
+    right: 5px;
+}
 
 .index-dropdown-item.active img {
+    display: inline;
+}
+.alert-dropdown-item.active img {
     display: inline;
 }
 
