--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -4529,6 +4529,7 @@ color: #C8C7CC;
     font-weight: var(--fw-400);
     font-family: "DINpro", Arial, sans-serif;
     border-radius: 4px;
+    min-height: 36px; /* Min height for any dropdown option including empty */
 }
 
 #dashboard-options .dashboard:hover{
