--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -1842,6 +1842,15 @@ progress.hidden {
     border-width: 0;
     margin-left: 15px;
 }
+#favbutton{
+    background-image: url(../assets/star-outline.svg);
+    height: 16px;
+    width: 16px;
+    cursor: pointer;
+    background-color: transparent;
+    border-width: 0;
+    margin-left: 15px;
+}
 
 #delbutton:hover {
     background-image: url(../assets/dark-delete-icon-hover.svg);
