--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -1228,7 +1228,11 @@ progress.hidden {
     border-radius: 3px;
 }
 
-.ui-widget-content .ui-state-highlight,
+.ui-widget-content .ui-state-highlight{
+    border: 1px solid var(--error);
+    background: var(--accent-color);
+    color: var(--white-0);
+}
 .ui-widget-header .ui-state-highlight {
     border: 1px solid var(--error);
     background: var(--accent-color);
@@ -2178,9 +2182,9 @@ div#download-info {
 }
 
 .validateTips.active {
-    height: 15px;
-    line-height: 12px;
-    font-size: 10px;
+    height: 1em;
+    line-height: 1em;
+    font-size: 0.8em;
     border:none;
     margin:0 0 5px 0;
     display: block;
